--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "7.*",
         "ext-pcre": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
+    },
     "autoload": {
         "psr-4": {
             "": "src/"
