Added recovery ISO-8859-1 and CP1252 strings to UTF-8.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Easy rules based string replacer",
     "require" : {
         "php": "7.*",
-        "ext-pcre": "*"
+        "ext-pcre": "*",
+        "neitanod/forceutf8": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
